# asio4all-python

./: BUILD_FIXES.md  LICENSE  MANIFEST.in  PUBLISHING_GUIDE.md  README.md  build_package.py  pyproject.toml  requirements.txt  setup.py  test_asio4all.py
.github/workflows/: build-and-publish.yml  test.yml
asio4all/: __init__.py  asio4all.pyi  asio4all.pyx  enums.py
asio4all/lib/: CLSID.cpp  a4aInterface.cpp  a4aInterface.h  stdafx.cpp  stdafx.h  targetver.h
asio4all/lib/COMMON/: iaa4aprv.h
